<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CineStudio</string>

    <string name="nav_movies">Movies</string>
    <string name="nav_search">Search</string>
    <string name="nav_profile">Profile</string>

    <string name="movie_poster_description">Movie poster image</string>
    <string name="movie_backdrop_description">Movie backdrop image</string>

    <string name="profile_picture_description">User profile picture</string>
    <string name="profile_section_watched_movies">Watched Movies</string>
    <string name="profile_section_my_lists">My Lists</string>
    <string name="profile_section_settings">Settings</string>
    <string name="profile_logout">Logout</string>
    <string name="no_movies_to_display">There is no movie available</string>
</resources>